Migration Alfresco 4.2